--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lvlg</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>LVGL</h1>
+
+    <div>
+        <p>Aquí encontrará lo necesario para poder programar LVGL en Windows.</p>
+    </div>
 </body>
 </html>
