--- a/index.html
+++ b/index.html
@@ -1,15 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lvlg</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LVGL en Windows</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #1e1e1e;
+      color: #ddd;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      background-color: #333;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    }
+
+    h1, h2 {
+      color: #ddd;
+      text-align: center;
+    }
+
+    p, li {
+      line-height: 1.6;
+    }
+
+    a {
+      color: #4bb0d7;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>LVGL</h1>
-
-    <div>
-        <p>Aquí encontrará lo necesario para poder programar LVGL en Windows.</p>
-    </div>
+  <div class="container">
+    <h1>Programación LVGL en Windows</h1>
+    <p>LVGL (Light and Versatile Graphics Library) es una biblioteca gráfica de código abierto diseñada para crear interfaces de usuario embebidas. Este sitio web proporciona recursos y tutoriales para programar con LVGL en entornos de Windows.</p>
+    <h2>Recursos útiles:</h2>
+    <ul>
+      <li><a href="https://lvgl.io/" target="_blank">Sitio oficial de LVGL</a></li>
+      <li><a href="https://github.com/lvgl/lvgl" target="_blank">Repositorio de LVGL en GitHub</a></li>
+      <li><a href="https://docs.lvgl.io/latest/en/html/index.html" target="_blank">Documentación de LVGL</a></li>
+      <li><a href="https://forum.lvgl.io/" target="_blank">Foro de la comunidad LVGL</a></li>
+    </ul>
+    <h2>Tutoriales:</h2>
+    <ul>
+      <li><a href="https://docs.lvgl.io/latest/en/html/get-started/esp-idf.html" target="_blank">Integración de LVGL con ESP-IDF</a></li>
+      <li><a href="https://docs.lvgl.io/latest/en/html/porting/esp32.html" target="_blank">Guía para portar LVGL a ESP32</a></li>
+    </ul>
+    <p>¡Explora estos recursos para comenzar a programar interfaces de usuario increíbles con LVGL en tu entorno de desarrollo de Windows!</p>
+    <p>Además, no dudes en unirte a la comunidad de LVGL en el foro oficial para obtener ayuda, compartir ideas y contribuir al desarrollo de la biblioteca.</p>
+  </div>
 </body>
 </html>
